Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-24020

Trim with remove_str Fails on Spider SE

    XMLWordPrintable

Details

    Description

      When using trim() with remove_str (for example trim(leading '*' from col_a)) using the spider storage engine, it fails with ERROR 1582 (42000): Incorrect parameter count in the call to native function 'ltrim')

      How to Repeat

      1. Create tables on backends:

      bk.sql

      CREATE TABLE t1 (
          id int,
          info varchar(30)
      )ENGINE=InnoDB;
      

      2. Create the table on spider:

      spider.sql

      CREATE TABLE t1 (
          id int,
          info varchar(30)
      )ENGINE=Spider COMMENT='wrapper "mysql", table "t1"'
      PARTITION BY LIST (id%2) (
          PARTITION pt1 VALUES IN (0) COMMENT = 'srv "backend0"' ENGINE=SPIDER,
          PARTITION pt2 VALUES IN (1) COMMENT = 'srv "backend1"' ENGINE=SPIDER
      );
      

      3. Then, execute a SQL with trim() on spider:

      trim.sql

      MariaDB [test]> UPDATE t1 SET info = trim(LEADING '[' FROM info) WHERE id = 12345;
      

      Then, it fails with error

      ERROR 1582 (42000): Incorrect parameter count in the call to native function 'ltrim'

      Suggested fix

      https://github.com/MariaDB/server/pull/1662

      Attachments

        Activity

          People

            nayuta-yanagisawa Nayuta Yanagisawa (Inactive)
            yongxinxu Yongxin Xu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 3h
                3h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.