MDEV-24020: Trim with remove_str Fails on Spider

This patch fixes the bug that TRIM(BOTH ... FROM $str), TRIM(LEADING ... FROM $str), and
TRIM(TRAILING ... FROM $str) failed with errors when executing on Spider.